# BERT-TraditionalSimplified-Classifier

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Gradio_app.py  LICENSE  MODEL_CARD.md  PR_DRAFT.md  README.md  focal_loss.py  modelcard.md  pyproject.toml
.github/workflows/: quality.yml  tests.yml
configs/: data.yaml  eval.yaml  model.yaml  train.yaml
notebooks/: classifier_finetune.ipynb
scripts/: clear_outputs.py  convert_ipynb.py  eval_local.sh  preprocess.py  train_local.sh
src/bert_ts_classifier/: __init__.py
src/bert_ts_classifier/data/: datamodule.py
src/bert_ts_classifier/evaluation/: eval.py
src/bert_ts_classifier/infer/: predict.py  serve_fastapi.py
src/bert_ts_classifier/models/: bert_classifier.py
src/bert_ts_classifier/training/: train.py
src/bert_ts_classifier/utils/: io.py  logging.py  seed.py
src/data/: gen_tran_data.ipynb
tests/: test_data.py  test_metrics.py  test_model.py  test_train_loop.py  test_train_utils.py  test_utils.py
